# PyQCS

./: .codacy.yml  .gitmodules  .travis.yml  MANIFEST.in  Makefile  README.rst  install-sqc.sh  meson.build  pyproject.toml  pytest.ini  requirements.tx  setup.py  test.py  tox.ini
.github/actions/: test-tox-slow.yml
.github/actions/test-tox-slow/: action.yml
.github/workflows/: build-and-upload-pypi.yml  pythonapp.yml  pythonpublish.yml  test-tox-fast.yml  test-tox-slow.yml  test-tox.yml
backend/: main.cpp  meson.build
backend/include/: dsv.hpp  graphical.hpp  graphical2dsv.hpp  time_m.hpp
backend/include/ll/: ll.hpp
backend/include/rbt/: rbt.hpp
backend/src/: dsv.cpp  graphical.cpp  graphical2dsv.cpp
backend/src/ll/: ll.cpp
backend/src/rbt/: rbt.cpp
backend/tests/: dsv_HH_I.cpp  dsv_HZH_X.cpp  dsv_S_by_R.cpp  graph2dsv_selected_exports.cpp  ll_delete.cpp  ll_has_value.cpp  ll_insert.cpp  rbtree_delete.cpp  rbtree_has_value.cpp  rbtree_insert.cpp  util.hpp
c/: Makefile  bytecode.rst
c/src/: bytecode.c  bytecode.h  error.h  exec.c  exec.h  graph_operations.c  graph_operations.h  linked_list.c  linked_list.h  main.c  raw_state.c  raw_state.h  sample.c  sample.h  vops.h
examples/: C_L_factorizaions.ipynb  bell_state.ipynb  circuit_building.ipynb  computing_vops.ipynb  graphical_states.ipynb  presentation_BNL.ipynb  using_experiments.ipynb
pyqcs/gates/: circuits.py
pyqcs/gates/implementations/: basic_gates.c  generic_setup.h
pyqcs/state/: state.py
src/backend/: meson.build  some_dsv_tests.cpp
src/backend/include/: dsv.hpp  graphical.hpp
src/backend/src/: dsv.cpp  graphical.cpp
src/backend/tests/: graph2dsv_selected_exports_CZ.cpp  graphical_copy.cpp  graphical_specific_circuit.cpp
src/pyqcs/: __init__.py  measurement.py  meson.build  utils.py
src/pyqcs/compile/: m2g.py
src/pyqcs/experiment/: gradient_decent.py  nelder_mead.py  workflow.py
src/pyqcs/gates/: abc.py  builtins.py  circuits.py  exceptions.py  executor.py  gate.py
src/pyqcs/gates/implementations/: __init__.py  basic_gates.c  basic_gates.h  compute_amplitude.c  generic_gate.c  generic_setup.h
src/pyqcs/graph/: abc.py  c_l.py  gate.py  rawstate.cpp  state.py  util.py
src/pyqcs/graph/backend/: graph_operations.c  graph_operations.h  linked_list.c  linked_list.h  raw_state.c  raw_state.h  vops.h
src/pyqcs/noise/: __init__.py  abc.py  executor.py  noise_channel.py
src/pyqcs/state/: abc.py  dsv.cpp  pretty_state.py  state.py
src/pyqcs/util/: bytecode.py  flatten.py  from_lists.py  random_circuits.py  random_graphs.py  to_circuit.py  to_diagram.py
test/: conftest.py  getst_graph_clear_vops_phase.py  test_against_sqc.py  test_basic_gates.py  test_builtin_gates.py  test_builtins_against_sqc.py  test_cicruit_construction.py  test_circuit_get_dagger.py  test_clear_gate_cache.py  test_exceptions.py  test_experiment_gradient_decent.py  test_experiment_nelder_mead.py  test_gates_circuits_building.py  test_gates_circuits_dummies.py  test_generic_gate.py  test_graph_CZ_on_random_graph5.py  test_graph_against_naive.py  test_graph_backend.py  test_graph_backend_single_qbit.py  test_graph_deepcopy.py  test_graph_entanglement.py  test_graph_failing_circuit.py  test_graph_faining_circuit.py  test_graph_from_list.py  test_graph_isolated_qbits_CZ.py  test_graph_measurement.py  test_graph_measurement_against_naive.py  test_graph_overlap.py  test_graph_overlap_against_naive.py  test_graph_overlap_currently_failing.py  test_graph_project.py  test_graph_state.py  test_graph_third_CZ.py  test_graph_to_circuit.py  test_graph_vops_preserve_phase.py  test_measurement.py  test_measurement_against_sqc.py  test_random_alternate_circuits_against_sqc.py  test_random_circuits_against_sqc.py  test_state.py  (+3 more)
test/dsv/: compute_phase_c_against_py.py  test_builtin_gates.py  test_circuit_identities.py  test_compute_phase_c_against_py.py  test_generic_gate.py  test_measurement.py  test_random_alternate_circuits_against_sqc.py  test_random_circuits_against_sqc.py  test_state_projection_simple.py
test/graph/: test_clear_vops_phase_constructed.py  test_clear_vops_phase_systematic.py  test_graph_CZ_on_random_graph5.py  test_graph_against_naive.py  test_graph_backend.py  test_graph_backend_single_qbit.py  test_graph_deepcopy.py  test_graph_entanglement.py  test_graph_global_phase.py  test_graph_isolated_qbits_CZ.py  test_graph_isolated_qbits_CZ_phase.py  test_graph_measurement.py  test_graph_measurement_against_naive.py  test_graph_overlap.py  test_graph_overlap_against_naive.py  test_graph_project.py  test_graph_state.py  test_graph_to_circuit.py  test_graph_to_naive_3qbits.py
