[project]
authors = [
    {name="Daniel Knüttel", email="daniel.knuettel@daknuett.eu"}
]
description = "A quantum computing simulator."
requires-python=">=3.4"

[project.urls]
repository="https://github.com/daknuett/pyqcs"

[build-system]
requires = ["meson", "toml", "mesonpep517", "numpy", "ninja"]
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
meson-python-option-name = "python3"

readme="README.rst"
platforms="linux"
home-page="https://github.com/daknuett/pyqcs"
version="3.0.0a"
dependencies=['numpy']
