[project]
authors = [
    {name="Daniel Knüttel", email="daniel.knuettel@daknuett.eu"}
]
description = "A quantum computing simulator."
requires-python=">=3.4"
readme="README.rst"
dependencies=['numpy']

platforms="linux"
home-page="https://github.com/daknuett/pyqcs"
version="3.0.0a"

[project.urls]
repository="https://github.com/daknuett/pyqcs"

[build-system]
requires = ["meson", "toml", "numpy", "ninja", "mesonpep517 @ https://gitlab.com/thiblahute/mesonpep517/-/archive/master/mesonpep517-master.zip"]
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
meson-python-option-name = "python3"
summary = "A quantum computing simulator."
